# nyctalis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
fakeroot/boot/grub/: grub.cfg
standard/: CMakeLists.txt
standard/include/: debug.hpp  io.hpp  ssg.hpp  string.hpp
standard/src/debug/: log.cpp
standard/src/io/: print.cpp  putchar.cpp  puts.cpp
standard/src/string/: inttostring.cpp  strlength.cpp
